# eye-break

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
.github/workflows/: pages.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  idle.rs  lib.rs  main.rs  notify.rs  settings.rs  state.rs  timer.rs  tray.rs
src/lib/: core.tauri.ts  core.ts  core.web.ts  types.ts
src/routes/: +page.svelte
